<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MConsole</string>
    <string name="menu_settings">Settings</string>
    <string name="server_list_header">Server\'s list</string>
    <string name="button_add">Add</string>
    <string name="button_remove">Remove</string>
    <string name="button_edit">Edit</string>
    <string name="button_connect">Connect</string>
    <string name="server_address">Server address:</string>
    <string name="server_address_hint">mc.yourserver.org</string>
    <string name="server_name">Server name:</string>
    <string name="server_name_hint">Optional server name</string>
    <string name="server_port">rcon.port:</string>
    <string name="server_port_hint">25575</string>
    <string name="server_password">Password:</string>
    <string name="server_reset_password">Reset stored rcon password</string>
    <string name="enter_password">Password</string>
    <string name="server_password_hint">rcon password</string>
    <string name="store_password">remember password</string>
    <string name="ok">OK</string>
    <string name="send"> Send </string>
    <string name="cancel">Cancel</string>
    <string name="server">Server</string>
    <string name="server_delete">Delete this server?</string>
    <string name="server_console">Minecraft Server Console</string>
    <string name="server_address_alert">Server address missing!</string>
    <string name="server_password_alert">Password missing!</string>
    <string name="unknown_host_error">Unknown host</string>
    <string name="connection_error">Connection error</string>
    <string name="password_error">Invalid password</string>
    <string name="error">Error</string>
    <string name="players_online">Players online:</string>
    <string name="player_admin">Admin player</string>
    <string name="player_action">Player action</string>
    <string name="player_action_teleport_to">Telport to player</string>
    
    <string name="player_admin_gamemode">Game mode</string>
    <string name="player_admin_gamemodechanged">game mode changed</string>
    <string name="player_admin_gamemodefailed">cannot change game mode</string>
    <string name="player_admin_kick_ok">kicked</string>
    <string name="player_admin_kick_fail">kick failed</string>
    <string name="player_admin_op_ok">opped</string>
    <string name="player_admin_op_failed">op failed</string>
    <string name="player_admin_deop_ok">de-opped</string>
    <string name="player_admin_deop_failed">deop failed</string>
    <string name="player_admin_ban_ok">banned</string>
    <string name="player_admin_ban_failed">ban failed</string>
    <string name="player_admin_pardon_ok">un-banned</string>
    <string name="player_admin_pardon_failed">unban failed</string>
    <string name="server_admin_save_ok">saved</string>
    <string name="server_admin_save_failed">save failed</string>
    <string name="player_admin_ban">This is serious!</string>
    <string name="player_admin_ban_text">You are going to ban</string>
    <string name="player_admin_ban_optional_ban_reason">Optional ban reason</string>
    <string name="server_console_action_say">Say</string>
    <string name="player_console_action_unban">Unban</string>
    <string name="server_console_action_banlist">Banlist</string>
    <string name="server_console_action_save_all">save-all</string>
    <string name="server_console_action_stop">stop</string>
    <string name="server_console_action_shutdown_warning">Shutdown server?</string>
    <string name="say_hint">message to everyone</string>
    <string name="say">Say</string>
    <string name="say_title">Say to all</string>
    <string name="tell_hint">private message</string>
    <string name="tell">Tell</string>
    <string name="tell_title">Whisper</string>
    <string name="seconds">sec.</string>
    <string name="weather">weather</string>
    <string name="time">time</string>
    <string name="difficulty">difficulty</string>
    <string name="tab_players">Players</string>
    <string name="tab_world">World</string>
    <string name="tab_console">Console</string>
    <string name="diff_set_to_peace">Difficulty set to peaceful</string>
    <string name="diff_set_to_easy">Difficulty set to easy</string>
    <string name="diff_set_to_normal">Difficulty set to normal</string>
    <string name="diff_set_to_hard">Difficulty set to hard</string>
    <string name="diff_set_failed">Cannot change difficulty</string>
    <string name="weather_set_to_clear">Weather set to clear</string>
    <string name="weather_set_to_rain">Weather set to rain</string>
    <string name="weather_set_to_thunder">Weather set to thunder</string>
    <string name="toggledownfall_ok">Toggled downfall</string>
    <string name="toggledownfall_failed">Toggling downfall failed</string>
    <string name="weather_set_failed">Weather change failed</string>
    <string name="time_set_ok">Time set</string>
    <string name="time_set_failed">Time set failed</string>
    <string name="teleport_ok">teleported</string>
    <string name="teleport_failed">teleport failed</string>
    <string name="whats_new_text">Welcome!</string>
    <string name="add_hint_text">Click Add button to provide server info</string>
    
</resources>